fltk-sys/src/surface.rs

/* automatically generated by rust-bindgen 0.64.0 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Fl_Surface_Device {
    _unused: [u8; 0],
}
extern "C" {
    pub fn Fl_Surface_Device_set_current(self_: *mut Fl_Surface_Device);
}
extern "C" {
    pub fn Fl_Surface_Device_is_current(self_: *mut Fl_Surface_Device) -> cty::c_int;
}
extern "C" {
    pub fn Fl_Surface_Device_surface() -> *mut Fl_Surface_Device;
}
extern "C" {
    pub fn Fl_Surface_Device_push_current(new_current: *mut Fl_Surface_Device);
}
extern "C" {
    pub fn Fl_Surface_Device_pop_current() -> *mut Fl_Surface_Device;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Fl_Image_Surface {
    _unused: [u8; 0],
}
extern "C" {
    pub fn Fl_Image_Surface_new(
        w: cty::c_int,
        h: cty::c_int,
        high_res: cty::c_int,
    ) -> *mut Fl_Image_Surface;
}
extern "C" {
    pub fn Fl_Image_Surface_delete(s: *mut Fl_Image_Surface);
}
extern "C" {
    pub fn Fl_Image_Surface_set_current(self_: *mut Fl_Image_Surface);
}
extern "C" {
    pub fn Fl_Image_Surface_is_current(self_: *mut Fl_Image_Surface) -> cty::c_int;
}
extern "C" {
    pub fn Fl_Image_Surface_image(self_: *mut Fl_Image_Surface) -> *mut cty::c_void;
}
extern "C" {
    pub fn Fl_Image_Surface_highres_image(self_: *mut Fl_Image_Surface) -> *mut cty::c_void;
}
extern "C" {
    pub fn Fl_Image_Surface_origin(
        self_: *mut Fl_Image_Surface,
        x: *mut cty::c_int,
        y: *mut cty::c_int,
    );
}
extern "C" {
    pub fn Fl_Image_Surface_set_origin(self_: *mut Fl_Image_Surface, x: cty::c_int, y: cty::c_int);
}
extern "C" {
    pub fn Fl_Image_Surface_rescale(self_: *mut Fl_Image_Surface);
}
extern "C" {
    pub fn Fl_Image_Surface_draw(
        self_: *mut Fl_Image_Surface,
        widget: *mut cty::c_void,
        delta_x: cty::c_int,
        delta_y: cty::c_int,
    );
}
extern "C" {
    pub fn Fl_Image_Surface_draw_decorated_window(
        self_: *mut Fl_Image_Surface,
        widget: *mut cty::c_void,
        delta_x: cty::c_int,
        delta_y: cty::c_int,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Fl_SVG_File_Surface {
    _unused: [u8; 0],
}
extern "C" {
    pub fn Fl_SVG_File_Surface_new(
        width: cty::c_int,
        height: cty::c_int,
        file: *const cty::c_char,
    ) -> *mut Fl_SVG_File_Surface;
}
extern "C" {
    pub fn Fl_SVG_File_Surface_delete(self_: *mut Fl_SVG_File_Surface);
}
extern "C" {
    pub fn Fl_SVG_File_Surface_origin(
        self_: *mut Fl_SVG_File_Surface,
        x: cty::c_int,
        y: cty::c_int,
    );
}
extern "C" {
    pub fn Fl_SVG_File_Surface_printable_rect(
        self_: *mut Fl_SVG_File_Surface,
        w: *mut cty::c_int,
        h: *mut cty::c_int,
    ) -> cty::c_int;
}
extern "C" {
    pub fn Fl_SVG_File_Surface_draw(
        self_: *mut Fl_SVG_File_Surface,
        widget: *mut cty::c_void,
        delta_x: cty::c_int,
        delta_y: cty::c_int,
    );
}
extern "C" {
    pub fn Fl_SVG_File_Surface_draw_decorated_window(
        self_: *mut Fl_SVG_File_Surface,
        widget: *mut cty::c_void,
        delta_x: cty::c_int,
        delta_y: cty::c_int,
    );
}
